[package]
name = "no_hello_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
timer = "0"
chrono = "0"
lazy_static = "1"
once_cell = "1"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
